--- a/footer.html
+++ b/footer.html
@@ -7,11 +7,11 @@
         <div class="social-media">
             <p>© 2024 Mondragon Unibertsitatea. All rights reserved.</p>
             <ul>
-                <li><a href="https://www.instagram.com/munibertsitatea/" class="social-icon"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="https://www.facebook.com/munibertsitatea/" class="social-icon"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="https://twitter.com/munibertsitatea" class="social-icon"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="https://www.youtube.com/user/mondragonuni" class="social-icon"><i class="fab fa-youtube"></i></a></li>
-                <li><a href="https://www.linkedin.com/school/118304/?pathWildcard=118304" class="social-icon"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="https://www.instagram.com/munibertsitatea/" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://www.facebook.com/munibertsitatea/" target="_blank" class="social-icon"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="https://twitter.com/munibertsitatea" target="_blank" class="social-icon"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://www.youtube.com/user/mondragonuni" target="_blank" class="social-icon"><i class="fab fa-youtube"></i></a></li>
+                <li><a href="https://www.linkedin.com/school/118304/?pathWildcard=118304" target="_blank" class="social-icon"><i class="fab fa-linkedin"></i></a></li>
             </ul>
         </div>
     </div>
