fixed image sources

--- a/festivities.html
+++ b/festivities.html
@@ -15,15 +15,15 @@
             <p>Arrasate hosts various local celebrations that showcase the town's rich cultural heritage. Some of the key festivities include:</p>
             <div class="gallery gallery-2">
                 <div class="image-container">
-                    <img src="/images/SanJuanak.jpg" alt="San Juan Festival">
+                    <img src="images/SanJuanak.jpg" alt="San Juan Festival">
                     <span class="image-description">San Juanak, the village festivals</span>
                 </div>
                 <div class="image-container">
-                    <img src="/images/Maritxu.jpg" alt="Maritxu Festival">
+                    <img src="images/Maritxu.jpg" alt="Maritxu Festival">
                     <span class="image-description">Maritxu Kajoi, a party where everyone wears fancy clothes</span>
                 </div>
                 <div class="image-container">
-                    <img src="/images/santamasak.jpg" alt="Santamasak Festival">
+                    <img src="images/santamasak.jpg" alt="Santamasak Festival">
                     <span class="image-description">Santamasak, a holiday that marks the beginning of Christmas</span>
                 </div>
             </div>
@@ -38,15 +38,15 @@
             <p>The Basque Country is rich in regional events that attract visitors from all over. Major festivities include:</p>
             <div class="gallery gallery-3">
                 <div class="image-container">
-                    <img src="/images/semanagrande.jpg" alt="Semana Grande Festival">
+                    <img src="images/semanagrande.jpg" alt="Semana Grande Festival">
                     <span class="image-description">Semana grande, the main festival of San Sebastian</span>
                 </div>
                 <div class="image-container">
-                    <img src="/images/Euskararen-eguna.jpg" alt="Basque Language Day">
+                    <img src="images/Euskararen-eguna.jpg" alt="Basque Language Day">
                     <span class="image-description">Euskareren eguna, annual celebration dedicated to the Basque language spoken in the territory of Euskal Herria</span>
                 </div>
                 <div class="image-container">
-                    <img src="/images/local_culture.jpg" alt="Other Local Festivals">
+                    <img src="images/local_culture.jpg" alt="Other Local Festivals">
                     <span class="image-description">Throughout the year, numerous towns celebrate their unique traditions and customs.</span>
                 </div>
             </div>
@@ -62,15 +62,15 @@
             <p>To help make your stay enjoyable, here are some recommendations for leisure activities in Arrasate and nearby areas:</p>
             <div class="gallery gallery-2">
                 <div class="image-container">
-                    <img src="/images/teatro.jpg" alt="Theaters">
+                    <img src="images/teatro.jpg" alt="Theaters">
                     <span class="image-description">Explore local theaters for plays, performances, and cultural events</span>
                 </div>
                 <div class="image-container">
-                    <img src="/images/cinema2.jpg" alt="Cinemas">
+                    <img src="images/cinema2.jpg" alt="Cinemas">
                     <span class="image-description">Catch the latest movies at nearby cinemas</span>
                 </div>
                 <div class="image-container">
-                    <img src="/images/museum.jpg" alt="Museum">
+                    <img src="images/museum.jpg" alt="Museum">
                     <span class="image-description">Explore the rich history at local museums</span>
                 </div>            
             </div>
