--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer-content">
     <div class="footer-left">
-        <img src="/images/MU_logo.png" alt="Logo">
+        <img src="images/MU_logo.png" alt="Logo">
         <p>Authors: Group 8</p>
     </div>
     <div class="footer-center">
