--- a/getaways.html
+++ b/getaways.html
@@ -22,37 +22,37 @@
                 attractions. Here are a few recommendations:</p>
             <div class="gallery">
                 <div class="image-container">
-                    <img src="/images/Bilbao.jpg" alt="Bilbao City">
+                    <img src="images/Bilbao.jpg" alt="Bilbao City">
                     <span class="image-description">Discover Bilbao - A blend of history and modern art with the iconic
                         Guggenheim Museum.</span>
                 </div>
                 <div class="image-container">
-                    <img src="/images/SanSebastian.jpeg" alt="San Sebastián City">
+                    <img src="images/SanSebastian.jpeg" alt="San Sebastián City">
                     <span class="image-description">Discover San Sebastián - Known for its beaches and world-class
                         cuisine.</span>
                 </div>
                 <div class="image-container">
-                    <img src="/images/Vitoria-Gasteiz.jpeg" alt="Vitoria-Gasteiz City">
+                    <img src="images/Vitoria-Gasteiz.jpeg" alt="Vitoria-Gasteiz City">
                     <span class="image-description">Discover Vitoria-Gasteiz - The green capital of the Basque Country,
                         known for its medieval old town.</span>
                 </div>
                 <div class="image-container">
-                    <img src="/images/SanJuanDeGaztelugatxe.jpeg" alt="San Juan de Gaztelugatxe">
+                    <img src="images/SanJuanDeGaztelugatxe.jpeg" alt="San Juan de Gaztelugatxe">
                     <span class="image-description">Climb to San Juan de Gaztelugatxe - A stunning islet with a scenic
                         path and church at the top.</span>
                 </div>
                 <div class="image-container">
-                    <img src="/images/Zumaia.jpg" alt="Zumaia Flysch">
+                    <img src="images/Zumaia.jpg" alt="Zumaia Flysch">
                     <span class="image-description">Walk along Zumaia’s Flysch cliffs - A natural wonder along the
                         coast.</span>
                 </div>
                 <div class="image-container">
-                    <img src="/images/Oñati.jpeg" alt="Oñati Village">
+                    <img src="images/Oñati.jpeg" alt="Oñati Village">
                     <span class="image-description">Explore Oñati - A charming village known for its historical
                         architecture and the Sanctuary of Arantzazu.</span>
                 </div>
                 <div class="image-container">
-                    <img src="/images/Zarautz.jpeg" alt="Zarautz Beach">
+                    <img src="images/Zarautz.jpeg" alt="Zarautz Beach">
                     <span class="image-description">Visit Zarautz - A surfers' paradise with a long sandy beach.</span>
                 </div>
             </div>
@@ -73,19 +73,19 @@
             </p>
             <div class="gallery">
                 <div class="image-container">
-                    <img src="/images/Aizkorri.jpeg" alt="Aizkorri">
+                    <img src="images/Aizkorri.jpeg" alt="Aizkorri">
                     <span class="image-description">Aizkorri</span>
                 </div>
                 <div class="image-container">
-                    <img src="/images/Gorbea.jpeg" alt="Gorbea">
+                    <img src="images/Gorbea.jpeg" alt="Gorbea">
                     <span class="image-description">Gorbea</span>
                 </div>
                 <div class="image-container">
-                    <img src="/images/Anboto.jpeg" alt="Anboto">
+                    <img src="images/Anboto.jpeg" alt="Anboto">
                     <span class="image-description">Anboto</span>
                 </div>
                 <div class="image-container">
-                    <img src="/images/Udalaitz.jpeg" alt="Udalaitz">
+                    <img src="images/Udalaitz.jpeg" alt="Udalaitz">
                     <span class="image-description">Udalaitz</span>
                 </div>
             </div>
@@ -109,19 +109,19 @@
             <p>Looking for a more relaxing activity? Explore the beautiful Basque coastline:</p>
             <div class="gallery">
                 <div class="image-container">
-                    <img src="/images/ZarautzPlaya.jpeg" alt="Zarautz">
+                    <img src="images/ZarautzPlaya.jpeg" alt="Zarautz">
                     <span class="image-description">Zarautz</span>
                 </div>
                 <div class="image-container">
-                    <img src="/images/Concha.jpeg" alt="La Concha">
+                    <img src="images/Concha.jpeg" alt="La Concha">
                     <span class="image-description">La Concha</span>
                 </div>
                 <div class="image-container">
-                    <img src="/images/ZumaiaPlaya.jpeg" alt="Zumaia">
+                    <img src="images/ZumaiaPlaya.jpeg" alt="Zumaia">
                     <span class="image-description">Zumaia</span>
                 </div>
                 <div class="image-container">
-                    <img src="/images/Sopelana.jpeg" alt="Sopelana">
+                    <img src="images/Sopelana.jpeg" alt="Sopelana">
                     <span class="image-description">Sopelana</span>
                 </div>
             </div>
