--- a/guide.html
+++ b/guide.html
@@ -8,15 +8,15 @@
         <h3>Get involved with student clubs or sports teams to immerse yourself in university life!</h3>
         <div class="gallery gallery-1">
             <div class="image-container">
-                <img src="/images/image_1.jpg" alt="Example Image 1">
+                <img src="images/image_1.jpg" alt="Example Image 1">
                 <span class="image-description">Joining a club can help you make friends!</span>
             </div>
             <div class="image-container">
-                <img src="/images/image_2.jpg" alt="Example Image 2">
+                <img src="images/image_2.jpg" alt="Example Image 2">
                 <span class="image-description">Start a music band with your university friends!</span>
             </div>
             <div class="image-container">
-                <img src="/images/image_3.jpg" alt="Example Image 3">
+                <img src="images/image_3.jpg" alt="Example Image 3">
                 <span class="image-description">Participating in sports boosts your physical health!</span>
             </div>
         </div>
@@ -32,15 +32,15 @@
         <p><strong>Weekend Getaways:</strong> Plan trips to scenic spots like Gorbea Natural Park or Zumaia’s Flysch cliffs to unwind and recharge. <a href="">Learn more...</a></p>
         <div class="gallery gallery-2">
             <div class="image-container">
-                <img src="/images/image_4.jpg" alt="Beautiful hiking trail in the Basque Country">
+                <img src="images/image_4.jpg" alt="Beautiful hiking trail in the Basque Country">
                 <span class="image-description">Go hiking to Udalaitz to get the best view of Arrasate and surroundings!</span>
             </div>
             <div class="image-container">
-                <img src="/images/image_5.jpg" alt="View of Urkulu">
+                <img src="images/image_5.jpg" alt="View of Urkulu">
                 <span class="image-description">Visit Urkulu it is a great plan to do cycling!</span>
             </div>
             <div class="image-container">
-                <img src="/images/image_6.jpg" alt="Zumaia Flysch cliffs">
+                <img src="images/image_6.jpg" alt="Zumaia Flysch cliffs">
                 <span class="image-description">The stunning Flysch cliffs at Zumaia, a perfect getaway.</span>
             </div>
         </div>
@@ -56,7 +56,7 @@
         <h2><span class="tip-number"># Tip 3</span> Academic Success</h2>
         <h3>Take full advantage of the library’s research materials and quiet study spaces for focused learning.</h3>
         <div class=" gallery-3">
-            <img src="/images/image_7.jpg" alt="Example Image 7">
+            <img src="images/image_7.jpg" alt="Example Image 7">
         </div>
         <h3>Check out the following options!</h3>
         <ul class="useful-links">
@@ -70,15 +70,15 @@
         <h3> Experience the Basque culture by attending local festivals, trying pintxos, and participating in traditional activities.</h3>
         <div class="gallery gallery-4">
             <div class="image-container">
-                <img src="/images/image_10.jpg" alt="Example Image 8">
+                <img src="images/image_10.jpg" alt="Example Image 8">
                 <span class="image-description">Experience the vibrant atmosphere of local festivities.</span>
             </div>
             <div class="image-container">
-                <img src="/images/image_9.jpg" alt="Trying Pintxos">
+                <img src="images/image_9.jpg" alt="Trying Pintxos">
                 <span class="image-description">Try the wide variety of pintxos!</span>
             </div>
             <div class="image-container">
-                <img src="/images/image_8.jpg" alt="Basque Dance">
+                <img src="images/image_8.jpg" alt="Basque Dance">
                 <span class="image-description">Participate in traditional Basque dances at a local festivities.</span>
             </div>
         </div>
