--- a/practical_info.html
+++ b/practical_info.html
@@ -16,11 +16,11 @@
                 <h3>Find the best places to stay during your time at Mondragon Unibertsitatea.</h3>
                 <div class="gallery gallery-1">
                     <div class="image-container">
-                        <img src="/images/biteri.jpg" alt="University Residence">
+                        <img src="images/biteri.jpg" alt="University Residence">
                         <span class="image-description">University residence (Biteri) is a nice play to stay here in Arrasate.</span>
                     </div>
                     <div class="image-container">
-                        <img src="/images/image_t2.jpg" alt="Shared Apartment">
+                        <img src="images/image_t2.jpg" alt="Shared Apartment">
                         <span class="image-description">Consider sharing an apartment with other students for a more local experience.</span>
                     </div>
                 </div>
@@ -36,11 +36,11 @@
                 <h3>Learn about transportation options to get around the city and campus.</h3>
                 <div class="gallery gallery-4">
                     <div class="image-container">
-                        <img src="/images/image_t3.jpg" alt="Public bus">
+                        <img src="images/image_t3.jpg" alt="Public bus">
                         <span class="image-description">Public buses are a convenient way to travel in Mondragon and surrounding areas.</span>
                     </div>
                     <div class="image-container">
-                        <img src="/images/bicycle.jpg" alt="Cycling in the city">
+                        <img src="images/bicycle.jpg" alt="Cycling in the city">
                         <span class="image-description">Consider cycling for short distances around the city.</span>
                     </div>
                 </div>
@@ -58,11 +58,11 @@
                 <p><strong>Pharmacies:</strong> When you are sick, you should know where to buy medicine.</p>
                 <div class="gallery gallery-2">
                     <div class="image-container">
-                        <img src="/images/image_t7.jpg" alt="Supermarket">
+                        <img src="images/image_t7.jpg" alt="Supermarket">
                         <span class="image-description">Buy food and drinks in different place from Arrasate.</span>
                     </div>
                     <div class="image-container">
-                        <img src="/images/pharmacie.jpg" alt="Pharmacies">
+                        <img src="images/pharmacie.jpg" alt="Pharmacies">
                         <span class="image-description">Make sure you know where is your nearest pharmacy.</span>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                 <p><strong>Cinema:</strong> Make sure you're covered by health insurance before arriving. Mondragon Unibertsitatea provides basic health services, but it's important to have comprehensive coverage.</p>
                 <div class="gallery gallery-2">
                     <div class="image-container">
-                        <img src="/images/cinema.jpg" alt="Cinema">
+                        <img src="images/cinema.jpg" alt="Cinema">
                         <span class="image-description">At mondays there is a discount!</span>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                 <p><strong>Typical food:</strong> There are a lot of restaurants to go dinner.</p>
                 <div class="gallery gallery-2">
                     <div class="image-container">
-                        <img src="/images/arteaga.jpg" alt="Restaurant">
+                        <img src="images/arteaga.jpg" alt="Restaurant">
                         <span class="image-description">Go dinner!</span>
                     </div>
                 </div>
@@ -110,7 +110,7 @@
                 <p><strong>Emergency:</strong> You may need an emergency service during the stay.</p>
                 <div class="gallery gallery-2">
                     <div class="image-container">
-                        <img src="/images/image_t8.jpg" alt="Doctor consultation">
+                        <img src="images/image_t8.jpg" alt="Doctor consultation">
                         <span class="image-description">Access health services on campus with your insurance.</span>
                     </div>
                 </div>
