--- a/static/footer.html
+++ b/static/footer.html
@@ -18,11 +18,11 @@
     <div class="footer-right">
         <ul class="footer-links">
             <li><a href="#home" onclick="loadContent('home.html')">Home</a></li>
-            <li><a href="#practical_info"onclick="loadContent('practical_info.html')">Practical info</a></li>
-            <li><a href="#languages"onclick="loadContent('language.html')">Language</a></li>
-            <li><a href="#festivities"onclick="loadContent('festivities.html')">Festivities</a></li>
-            <li><a href="#guide"onclick="loadContent('guide.html')">First-Year Guide</a></li>
-            <li><a href="#getaways"onclick="loadContent('getaways.html')">Weekend Getaways</a></li>
+            <li><a href="#practical_info"onclick="loadContent('html/practical_info.html')">Practical info</a></li>
+            <li><a href="#languages"onclick="loadContent('html/language.html')">Language</a></li>
+            <li><a href="#festivities"onclick="loadContent('html/festivities.html')">Festivities</a></li>
+            <li><a href="#guide"onclick="loadContent('html/guide.html')">First-Year Guide</a></li>
+            <li><a href="#getaways"onclick="loadContent('html/getaways.html')">Weekend Getaways</a></li>
         </ul>
     </div>
 </footer>
